multiple dependency upgrades
Plugins
* logstash-input-azure_event_hubs: 1.5.1
* logstash-input-beats: 6.4.3-java

Jars:
* jackson: 2.14.1
* jackson-databind: 2.14.1
* guava: 32.1.3
* org.yaml:snakeyaml: 2.2 (ingest converter)

Gems:
* march_hare: 4.6.0-java
* jrjackson: 0.4.17

Other changes:
* tweak add-exports/add-opens to accomodate newer dependencies
* serialization changes to ObjectMappers.java to accomodate jackson 2.13

a