@@ -85,3 +85,8 @@
 
 17-:--add-opens java.base/sun.nio.ch=ALL-UNNAMED
 17-:--add-opens java.base/java.io=ALL-UNNAMED
+17-:--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+17-:--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+17-:--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+17-:--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+17-:--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
